  * debian/watch updated to track 1.9 branch.
  * debian/patches:
    - 04_dont-add-pkglibexecdir-path dropped, gdm-flexiserver script has been
      dropped from LightDM so the PATH addition was dropped as well.
    - 01_set-default-path and 06_allow_libpamsystemd_and_ck_together
      refreshed.
  * debian/rules:
    - stop removing gdmflexiserver since it doesn't exist anymore.

 -- Yves-Alexis Perez <corsac@debian.org>  Sun, 29 Dec 2013 15:39:12 +0100

lightdm (1.8.5-3) unstable; urgency=low

  * debian/lightdm.postrm: warn if user/group deletion failed.  closes: #731220
  * debian/control:
    - update standards version to 3.9.5.

 -- Yves-Alexis Perez <corsac@debian.org>  Sun, 29 Dec 2013 14:55:54 +0100

lightdm (1.8.5-2) unstable; urgency=medium

  * debian/patches:
    - 06_allow_libpamsystemd_and_ck_together added. Create a ConsoleKit
      session, even if a logind session already exists. That makes transition
      from ConsoleKit to systemd/logind somehow easier, but means some events
      might happen twice.                                       closes: #728361

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 02 Dec 2013 21:15:54 +0100

lightdm (1.8.5-1) unstable; urgency=low

  * New upstream bugfix release.
  * debian/patches:
    - 02_default-config removed, replaced by a config snippet.
  * debian/01_debian.conf:
    - add config snippet for Debian specific config
  * debian/lightdm.install:
    - install 01_debian.conf to /usr/share/lightdm/lightdm.conf.d/

 -- Yves-Alexis Perez <corsac@debian.org>  Thu, 07 Nov 2013 10:20:11 +0100

lightdm (1.8.3-1) unstable; urgency=low

  * New upstream release.
  * debian/rules:
    - enable all hardening flags.

 -- Yves-Alexis Perez <corsac@debian.org>  Thu, 31 Oct 2013 09:31:16 +0100

lightdm (1.8.2-1) unstable; urgency=low

  * New upstream release.
  * debian/patches:
    - 01_set-default-path, 02_default-config, 05_debianize-pam-files
      refreshed.