@@ -13,5 +13,4 @@ etc/apparmor.d/lightdm-guest-session
 etc/pam.d
 debian/lightdm-xsession.desktop /usr/share/xsessions
 debian/01_debian.conf /usr/share/lightdm/lightdm.conf.d
-usr/lib/*/lightdm/lightdm-set-defaults
-usr/lib/*/lightdm/lightdm-guest-session-wrapper
+usr/lib/*/lightdm/lightdm-guest-session
